--- a/partials/cover.hbs
+++ b/partials/cover.hbs
@@ -2,7 +2,7 @@
     <div class="site-cover u-overlay">
         <img class="cover-image lazyload jarallax-img u-object-fit"
             data-src="{{img_url @site.cover_image}}"
-            src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+            src="https://images.unsplash.com/photo-1622507614117-4ac3932e0db7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=574&q=80"
             alt="{{@site.title}}">
         <div class="cover-content">
             {{#if @site.description}}
