Replace the search input with a div that simulates the input
The input is used as a toggle for the native search, so we don't need an actual text input

--- a/assets/css/site/cover.css
+++ b/assets/css/site/cover.css
@@ -10,8 +10,15 @@
 }
 
 .site-cover .search-field {
+    display: flex;
+    align-items: center;
+    height: 50px;
+    padding: 0 15px;
+    font-size: 16px;
+    color: darkgray;
     cursor: pointer;
-    border: 0;
+    background-color: var(--white-color);
+    border-radius: 5px;
 }
 
 .cover-content {
