--- a/default.hbs
+++ b/default.hbs
@@ -50,8 +50,8 @@
             <div class="search">
                 <form class="search-form">
                     <div class="form-wrapper">
-                        <input class="search-field" type="text" placeholder="Search posts, tags, authors..." data-ghost-search disabled>
-                        <button class="form-button search-button" type="submit">
+                        <div class="search-field" data-ghost-search>Search posts, tags, authors...</div>
+                        <button class="form-button search-button" type="submit" data-ghost-search>
                             {{> "icons/search"}}
                             {{> "icons/close"}}
                         </button>
