--- a/default.hbs
+++ b/default.hbs
@@ -84,6 +84,10 @@
 
 </div>
 
+{{#is "post, page"}}
+    {{> "pswp"}}
+{{/is}}
+
 <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
