Add comments support (#133)

--- a/post.hbs
+++ b/post.hbs
@@ -43,13 +43,13 @@
         </nav>
         </div>
 
-    </article>
+        {{#if comments}}
+            <div class="gh-comments gh-canvas">
+                {{comments}}
+            </div>
+        {{/if}}
 
-    {{!-- <div class="comment-container gh-canvas">
-        <div class="comment">
-            If you want to embed comments, this is a good place to do it!
-        </div>
-    </div> --}}
+    </article>
 
     {{/post}}
 
